--- a/.github/workflows/01-execuacao-manual.yaml
+++ b/.github/workflows/01-execuacao-manual.yaml
@@ -14,5 +14,14 @@ jobs:
       - name: Instalando dependencias
         run: npm install
 
+      - name: Instalando mochawesome
+        run: npm install --save-dev mochawesome
+
       - name: Executando testes e2e
-        run: npm test
+        run: npx mocha --reporter mochawesome
+
+      - name: Upload do relatório de testes
+        uses: actions/upload-artifact@v4
+        with:
+          name: relatorio-mochawesome
+          path: mochawesome-report/
